src/test/ui/consts/rfc-2203-const-array-repeat-exprs/trait-error.stderr
error[E0277]: the trait bound `Foo<String>: Copy` is not satisfied
  --> $DIR/trait-error.rs:7:5
   |
LL |     [Foo(String::new()); 4];
   |     ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Foo<String>`
   |
   = help: the following implementations were found:
             <Foo<T> as Copy>
   = note: the `Copy` trait is required because the repeated element will be copied

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
